<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bookmarking</groupId>
    <artifactId>bookmarkanator</artifactId>
    <version>0.4.0-2</version>
    <packaging>jar</packaging>
    <name>bookmarkanator</name>
    <url></url>

    <developers>
        <developer>
            <id>flightx31</id>
            <name>Micah Lloyd</name>
            <email>flightx31@gmail.com</email>
            <organization>Micah Lloyd</organization>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.bookmarkanator.ui.fxui.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.10</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.8.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.10.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.zeroturnaround/zt-exec -->
        <dependency>
            <groupId>org.zeroturnaround</groupId>
            <artifactId>zt-exec</artifactId>
            <version>1.9</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
        <!--<dependency>-->
        <!--<groupId>com.thoughtworks.xstream</groupId>-->
        <!--<artifactId>xstream</artifactId>-->
        <!--<version>1.4.9</version>-->
        <!--</dependency>-->
        <!-- https://mvnrepository.com/artifact/edu.stanford.ejalbert/BrowserLauncher2 -->
        <!--<dependency>-->
        <!--<groupId>edu.stanford.ejalbert</groupId>-->
        <!--<artifactId>BrowserLauncher2</artifactId>-->
        <!--<version>1.3</version>-->
        <!--</dependency>-->

        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jfxtras/jfxtras-controls &ndash;&gt;-->
        <!--<dependency>-->
        <!--<groupId>org.jfxtras</groupId>-->
        <!--<artifactId>jfxtras-controls</artifactId>-->
        <!--<version>8.0-r5</version>-->
        <!--</dependency>-->
        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jfxtras/jfxtras-all &ndash;&gt;-->
        <!--<dependency>-->
        <!--<groupId>org.jfxtras</groupId>-->
        <!--<artifactId>jfxtras-all</artifactId>-->
        <!--<version>8.0-r5</version>-->
        <!--</dependency>-->

    </dependencies>
</project>
